# poziomki

./: .env.example  .fdroid.yml  .gitattributes  .gitignore  AGENTS.md  API_MIGRATION.md  CLAUDE.md  CODE_QUALITY.md  LICENSE  MATRIX_PROGRESS.md  SECURITY.md  docker-compose.prod.tuwunel.yml  docker-compose.prod.yml  docker-compose.yml  flake.nix  garage.toml  lightweight_migration.md  matrix_consensus.md  matrix_mismatch1.md  treefmt.nix
backend/: .gitignore  CHANGELOG.md  Caddyfile  Cargo.toml  Dockerfile  README.md  deny.toml  docker-compose.yaml
backend/.cargo/: audit.toml  config.toml
backend/.config/: nextest.toml
backend/.github/workflows/: ci.yaml
backend/config/: development.yaml  production.yaml  test.yaml
backend/examples/: playground.rs
backend/migration/: Cargo.toml
backend/migration/src/: lib.rs  m20220101_000001_users.rs  m20250209_000002_create_sessions.rs  m20250209_000003_create_tags_and_degrees.rs  m20250209_000004_create_profiles.rs  m20250209_000005_create_events_uploads_settings.rs  m20250209_000005_helpers.rs  m20250209_000006_seed_full_degrees.rs  m20250215_000007_replace_degrees_uw.rs  m20250216_000008_add_event_geo.rs  m20250216_000009_add_profile_personalization.rs  m20250217_000010_add_indexes.rs  m20250218_000011_create_otp_codes.rs  m20250218_000012_add_upload_variants.rs  m20250218_000013_add_search_trgm_indexes.rs  m20260219_000014_add_search_geo_indexes.rs  m20260219_000015_add_fts_tsvector.rs  m20260221_000016_create_matrix_dm_rooms.rs  m20260222_000017_create_auth_rate_limits.rs  m20260222_000018_create_job_outbox.rs
backend/migrations/00000000000000_diesel_initial_setup/: up.sql
backend/migrations/2026-02-23-000000_initial_schema/: down.sql  up.sql
backend/migrations/2026-02-24-000000_make_age_nullable/: down.sql  up.sql
backend/migrations/2026-02-24-010000_fix_dm_rooms_fk/: down.sql  up.sql
backend/migrations/2026-02-27-000000_tags_search_vector/: down.sql  up.sql
backend/migrations/2026-02-28-000000_seed_interest_tags/: down.sql  up.sql
backend/migrations/2026-03-05-000000_metrics_samples/: up.sql
backend/migrations/2026-03-09-000000_metrics_samples/: down.sql  up.sql
backend/migrations/2026-03-09-010000_event_recommendation_foundation/: down.sql  up.sql
backend/migrations/2026-03-12-000000_drop_age_and_show_age/: down.sql
backend/migrations/2026-03-12-000000_event_attendee_limit/: down.sql  up.sql
backend/migrations/2026-03-12-000000_event_max_attendees/: down.sql  up.sql
backend/migrations/2026-03-12-010000_event_requires_approval/: down.sql  up.sql
backend/migrations/2026-03-13-000000_drop_age_and_show_age/: up.sql
backend/migrations/2026-03-13-000000_drop_redundant_interactions_index/: down.sql  up.sql
backend/migrations/2026-03-13-010000_public_search_vector/: down.sql  up.sql
backend/migrations/2026-03-14-000000_chat_tables/: down.sql  up.sql
backend/migrations/2026-03-14-010000_drop_matrix/: down.sql  up.sql
backend/migrations/2026-03-15-000000_client_id_unique/: down.sql  up.sql
backend/migrations/2026-03-16-000000_event_cascade_delete/: down.sql  up.sql
backend/migrations/2026-03-18-000000_recommendation_feedback/: down.sql
backend/migrations/2026-03-18-000000_reports/: up.sql
backend/migrations/2026-03-18-010000_recommendation_feedback/: up.sql
backend/migrations/2026-03-22-000000_expires_at_indexes/: down.sql  up.sql
backend/migrations/2026-03-22-000000_profile_bookmarks/: down.sql  up.sql
backend/migrations/2026-03-29-000000_consolidated/: down.sql  up.sql
backend/migrations/2026-03-29-100000_chat_actions/: down.sql  up.sql
backend/migrations/2026-04-01-000000_profiles_bio_images/: down.sql  up.sql
backend/migrations/2026-04-02-120000_event_category/: down.sql  up.sql
backend/migrations/2026-04-09-000000_cleanup_orphaned_event_conversations/: down.sql  up.sql
backend/migrations/2026-04-10-000000_gamification/: down.sql  up.sql
backend/migrations/2026-04-10-000001_task_completions/: down.sql  up.sql
backend/migrations/2026-04-16-000000_user_audit_log/: down.sql  up.sql
backend/migrations/2026-04-17-000000_review_stub_flag/: down.sql  up.sql
backend/migrations/2026-04-18-010000_auth_security_definer/: down.sql  up.sql
backend/migrations/2026-04-18-020000_auth_writes_security_definer/: down.sql  up.sql
backend/migrations/2026-04-18-030000_profile_public_helpers/: down.sql  up.sql
backend/migrations/2026-04-18-040000_chat_rls_helpers/: down.sql  up.sql
backend/migrations/2026-04-18-050000_event_rls_helpers/: down.sql  up.sql
backend/migrations/2026-04-18-060000_sd_helpers_harden_search_path/: down.sql  up.sql
backend/migrations/2026-04-18-070000_xp_award_helper/: down.sql  up.sql
backend/migrations/2026-04-19-010000_rls_tier_a_policies/: down.sql  up.sql
backend/migrations/2026-04-19-020000_rls_tier_b_policies/: down.sql  up.sql
backend/migrations/2026-04-19-030000_rls_tier_c_policies/: down.sql  up.sql
backend/migrations/2026-04-19-040000_invariants_and_audit/: down.sql  up.sql
backend/migrations/2026-04-19-050000_user_ban_columns/: down.sql  up.sql
backend/migrations/2026-04-27-180000_chat_moderation_blur/: down.sql  up.sql
backend/migrations/2026-04-27-190000_profile_activities_statuses/: down.sql  up.sql
backend/migrations/2026-04-27-200000_chat_message_reports/: down.sql  up.sql
backend/migrations/2026-04-27-200000_status_ephemeral/: down.sql  up.sql
backend/migrations/2026-04-28-000000_chat_indicators/: down.sql  up.sql
backend/migrations/2026-04-28-000001_drop_chat_indicators/: down.sql
backend/migrations/2026-04-30-100000_push_subscriptions_apns/: down.sql  up.sql
backend/migrations/2026-05-02-000000_drop_recommendation_feedback/: down.sql  up.sql
backend/migrations/2026-05-06-000000_drop_gamification/: down.sql  up.sql
backend/migrations/2026-05-12-000000_fcm_push/: down.sql  (+1 more)
backend/scripts/: rust-code-analysis.sh
backend/src/: app.rs  app_support.rs  error.rs  healthcheck.rs  lib.rs  observability.rs  search.rs  security.rs  telemetry.rs
backend/tests/: image_moderation.rs  mod.rs  moderation.rs
(+999 files in other folders)
