[workspace]
resolver = "2"

[workspace.lints.rust]
unsafe_code = "forbid"
unused_must_use = "deny"
unused_imports = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
dbg_macro = "deny"
print_stdout = "deny"
print_stderr = "deny"
indexing_slicing = "deny"
string_slice = "deny"
wildcard_imports = "deny"
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
too_many_lines = "allow"
multiple_crate_versions = "allow"

[package]
name = "poziomki-backend"
version = "0.1.0"
edition = "2021"
publish = false
default-run = "poziomki_backend-cli"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
loco-rs = { version = "0.16" }

[dependencies]
loco-rs = { workspace = true  }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
tokio = { version = "1.45", default-features = false, features = [
  "rt-multi-thread",
] }
async-trait = { version = "0.1" }
axum = { version = "0.8", features = ["multipart"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
regex = { version = "1.11" }
migration = { path = "migration" }
sea-orm = { version = "1.1", features = [
  "sqlx-sqlite",
  "sqlx-postgres",
  "runtime-tokio-rustls",
  "macros",
] }
chrono = { version = "0.4" }
validator = { version = "0.20" }
uuid = { version = "1.6", features = ["v4"] }
include_dir = { version = "0.7" }
hmac = { version = "0.12" }
sha2 = { version = "0.10" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
matrix-sdk = { git = "https://github.com/matrix-org/matrix-rust-sdk", default-features = false, features = ["e2e-encryption", "rustls-tls"] }
ruma = { version = "0.14", features = ["client-api-c", "events"] }
opendal = { version = "0.55", features = ["services-s3", "services-fs"] }
url = { version = "2.5" }

[[bin]]
name = "poziomki_backend-cli"
path = "src/bin/main.rs"
required-features = []

[dev-dependencies]
loco-rs = { workspace = true, features = ["testing"] }
serial_test = { version = "3.1.1" }
rstest = { version = "0.25" }
insta = { version = "1.34", features = ["redactions", "yaml", "filters"] }

[lints]
workspace = true

# Stub out matrix-sdk-sqlite to avoid libsqlite3-sys links conflict with loco's sqlx-sqlite.
# matrix-sdk is used without sqlite feature (server-side backend doesn't need local sqlite store).
[patch."https://github.com/matrix-org/matrix-rust-sdk"]
matrix-sdk-sqlite = { path = "stubs/matrix-sdk-sqlite" }
