[workspace]
resolver = "2"

[workspace.lints.rust]
unsafe_code = "forbid"
unused_must_use = "deny"
unused_imports = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
dbg_macro = "deny"
print_stdout = "deny"
print_stderr = "deny"
indexing_slicing = "deny"
string_slice = "deny"
wildcard_imports = "deny"
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
too_many_lines = "allow"
multiple_crate_versions = "allow"

[package]
name = "poziomki-backend"
version = "0.1.0"
edition = "2021"
publish = false
default-run = "poziomki_backend-cli"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
tokio = { version = "=1.50.0", default-features = false, features = [
  "rt-multi-thread",
  "signal",
  "time",
] }
axum = { version = "=0.8.8", features = ["multipart"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
chrono = { version = "=0.4.44", default-features = false, features = ["clock", "serde"] }
validator = { version = "=0.20.0", features = ["derive"] }
uuid = { version = "=1.21.0", features = ["v4"] }
hmac = { version = "0.12" }
sha2 = { version = "0.10" }
reqwest = { version = "=0.13.2", default-features = false, features = ["json", "rustls"] }
rust-s3 = { version = "=0.37.1", default-features = false, features = ["tokio-rustls-tls", "fail-on-err"] }
url = { version = "=2.5.8" }

futures-util = { version = "0.3" }
subtle = { version = "2" }
lettre = { version = "=0.11.19", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder"] }
mail-auth = { version = "0.7", default-features = false, features = ["ring"] }
rustls-pki-types = "1"
hickory-resolver = { version = "0.25", features = ["tokio"] }
image = { version = "=0.25.9", default-features = false, features = ["jpeg", "png", "webp"] }
fast_image_resize = "=6.0.0"
webp = "=0.3.1"
thumbhash = "=0.1.0"
base64 = "=0.22.1"
tower-http = { version = "=0.6.8", features = ["set-header", "trace"] }
argon2 = { version = "=0.5.3", features = ["rand"] }
rand_core = { version = "0.6", features = ["getrandom"] }
jsonwebtoken = "=10.3.0"
dotenvy = "=0.15.7"
diesel = { version = "2.3", features = ["postgres", "uuid", "chrono", "serde_json"] }
diesel-async = { version = "0.7", features = ["postgres", "deadpool"] }
diesel_migrations = { version = "2.3", features = ["postgres"] }
deadpool = { version = "=0.12.3", features = ["rt_tokio_1"] }
thiserror = "2"

[[bin]]
name = "poziomki_backend-cli"
path = "src/bin/main.rs"
required-features = []

[[bin]]
name = "worker"
path = "src/bin/worker.rs"

[dev-dependencies]
serial_test = { version = "=3.4.0" }
axum-test = { version = "=19.0.0" }

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
opt-level = "s"

[lints]
workspace = true
