[package]
name = "matrix-sdk-sqlite"
version = "0.16.0"
edition = "2021"
description = "Stub: avoids libsqlite3-sys links conflict with loco's sqlx-sqlite"

[features]
crypto-store = []
state-store = []
event-cache = []
bundled = []
testing = []
experimental-encrypted-state-events = []

[dependencies]
